syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.orderservice.grpc.stub";
option java_outer_classname = "OrderProto";

package order;

service OrderService {
  rpc CreateOrder(OrderRequest) returns (OrderResponse);
}

message OrderRequest {
  int64 productId = 1;
  int32 quantity = 2;
}

message OrderResponse {
  int64 orderId = 1;
  string status = 2;
  string message = 3;
}